Fix broken checkbox in overflow

--- a/src/styles/general/_input-checkbox.scss
+++ b/src/styles/general/_input-checkbox.scss
@@ -12,7 +12,7 @@
     content: "";
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 10px;
     transform: translateY(-50%);
     width: 14px;
     height: 14px;
