--- a/src/styles/general/_input-toggle.scss
+++ b/src/styles/general/_input-toggle.scss
@@ -13,7 +13,7 @@
     display: inline-block;
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 10px;
     transform: translateY(-50%);
     width: 40px;
     height: 20px;
